Created Welcome component
className='quadrant'
styling to be a quarter of the full-view
displays welcome information and direction to sign up/sign in

full-view container set to 960px by 540px

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -3,3 +3,17 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.full-view {
+  border: solid black 2px;
+  width: 960px;
+  height: 540px;
+  display: flex;
+  flex-direction: row;
+}
+
+.quadrant {
+  border: solid orange 1px;
+  width: 50%;
+  height: 50%;
+}
