--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -18,3 +18,18 @@ body {
   width: 478px;
   height: 268px;
 }
+
+.next-image {
+  height: 268px;
+  width: 237px;
+  background-color: transparent;
+  display: inline-block;
+  position: relative;
+  bottom: 268px;
+  z-index: 10;
+}
+
+.next-image:hover {
+  background-color: blue;
+  opacity: 25%
+}
