Created header and footer
Footer updated with failure messages on failure.
Updated match logic to be able to return to to wagger after instant
match

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -33,3 +33,21 @@ body {
   background-color: blue;
   opacity: 25%
 }
+
+.header {
+  width: 960px;
+  height: 50px;
+  background-color: orange;
+}
+
+.footer {
+  width: 960px;
+  height: 60px;
+  background-color: orange;
+}
+
+.fail {
+  width: 960px;
+  height: 60px;
+  background-color: red;
+}
