Forms clear and sign out
Forms clear on success and failure. Sign out button signs out and gives
user feedback

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -51,3 +51,9 @@ body {
   height: 60px;
   background-color: red;
 }
+
+.success {
+  width: 960px;
+  height: 60px;
+  background-color: green;
+}
